alignment fix recipedetails

--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -147,3 +147,7 @@ h3 {
     width: 250px;
     object-fit: cover;
 }
+
+.width-match-content {
+    width: fit-content;
+}
